--- a/bibliography.bib
+++ b/bibliography.bib
@@ -80,3 +80,9 @@
   url = "https://github.com/intel/tbb",
   urldate = "2020-02-03",
 }
+@online{matrixgen:github,
+  title = "Matrixgen - Sparse Matrix Creation Toolkit",
+  url = "https://github.com/slavistan/matrixgen",
+  urldate = "2020-02-10",
+}
+
