--- a/content/abstract.tex
+++ b/content/abstract.tex
@@ -1,4 +1,4 @@
-\def\abstractWidth{12cm}
+\def\abstractWidth{14cm}
 
 \NewDocumentCommand{\abstrTitleStyle}{ m }{\center{\Large\textbf{#1}}\\\vspace{5mm}}
 
@@ -15,7 +15,7 @@
 
       Many domains of the physical sciences such as computational fluid dynamics and electrodynamics use simulations
       based on known governing laws to gather insights into a system's transient or static behavior. Where geometries
-      are regular structured grids are utilzed in the modelling process for their good performance due to the inherent
+      are regular structured grids are utilized in the modelling process for their good performance due to the inherent
       structural simplicity. The solution procedure involves matrix-vector multiplications on the sparse system matrix
       which are implemented using different general purpose sparse matrix storage formats, such as the compressed sparse
       row format (CSR). This thesis introduces the threefold compressed sparse row matrix storage format (C3SR) designed
