--- a/content/c3sr-outlook.tex
+++ b/content/c3sr-outlook.tex
@@ -1,6 +1,6 @@
 \chapter{Conclusion and Outlook}
 
-  The C3SR-format has been evalutated in terms of its compression scheme and its arithmetic performance based on two
+  The C3SR-format has been evaluated in terms of its compression scheme and its arithmetic performance based on two
   families of matrices derived from structured grids. The compression scheme is found to perform well in terms of
   compression ratio and storage size per nonzero in the matrix even when applied to matrices which deviate from the
   optimal case of fully structured grids.
@@ -9,7 +9,7 @@
   six configurations was the arithmetic performance shown to be limited by system bandwidth. Vectorization was shown to
   provide significant benefits or, at worst, be equivalent to a scalar implementations. For a subset of the systems
   used to gauge arithmetic performance the chosen problem's domain sizes proved to be too small to render the thread
-  sychronization overhead irrelevant. Introduction of perturbations to the fully regular problems showed a significant
+  synchronization overhead irrelevant. Introduction of perturbations to the fully regular problems showed a significant
   loss of performance, partly due to impairment of the ability to vectorize computations and because of deterioration in
   the predictability of memory accesses and data locality.
 
