--- a/content/c3sr-benchmarks.tex
+++ b/content/c3sr-benchmarks.tex
@@ -81,9 +81,9 @@
     \end{figure}
 
     The C3SR-matrix objects are created from the matrix's corresponding object in CSR-format according to the methods
-    explained in Section \ref{sec:gen-of-c3sr-from-csr}. The CSR-matrices are created using Matrixgen, a sparse matrix
-    creation toolkit, which has been developed alongside the C3SR-format project as an aid to its development. Matrixgen
-    is briefly showcased in Part II of this thesis.
+    explained in Section \ref{sec:gen-of-c3sr-from-csr}. The CSR-matrices are created using Matrixgen
+    \cite{matrixgen:github}, a sparse matrix creation toolkit, which has been developed alongside the C3SR-format
+    project as an aid to its development.
 
   \section{Relative Object Size for Fully Structured Matrices} \label{sec:rel-object-size-fully-structured}
 
@@ -92,7 +92,7 @@
     multiplication usually is a memory-bound operation and thus reducing the matrix's object size improves performance
     by limiting the amount of data that is required to move for the computation. As opposed to evaluating absolute
     object sizes, which are rather abstract without explicit knowledge of their context, the relative object size
-    constitutes an intuitive heustic and can be conceived of as a `price' one has to pay for any additional nonzero.
+    constitutes an intuitive heuristic and can be conceived of as a `price' one has to pay for any additional nonzero.
 
     Using matrices from the two families introduced in the previous section their relative object sizes are examined as
     a function of the grid's edge size and are compared against the corresponding matrix object in CSR-format. The COMP
@@ -271,7 +271,7 @@
     Considering matrices from the first family, whose nonzeros are all identical, note that the total number of elements
     in V is limited by unique classes of nodes in the grid, just as described above for J. In the same manner the
     storage requirements for $V$ are constant for all $d > 3$ and thus in $\mathcal{O}(1)$. Due to this VS exhibits the
-    same configuration as JS in the case layed out above. J, JP and RS remain unchanged while COMP retains its storage
+    same configuration as JS in the case laid out above. J, JP and RS remain unchanged while COMP retains its storage
     size requirements of $\mathcal{O}(d^2)$. The composition of SIMD chunks across inner nodes only changes its type
     according to the new data layout. Thus the relative storage requirements of matrices from the first family, whose
     nonzeros are all identical, converges towards $0$.
@@ -331,7 +331,7 @@
     conceived. The effects of deviations from this ideal will be explored in the next section by introducing
     perturbations to the regularity of the matrices. Nevertheless the results show the C3SR-format to be a zero-cost
     compression scheme in that whichever aspect of a sparse banded matrix derived from a structured grid can be
-    compressed, numerical values or structure, compresseses perfectly in the above sense.
+    compressed, numerical values or structure, compresses perfectly in the above sense.
 
   \section{Object Size per Nonzero for Perturbed Structured Matrices} \label{sec:objsize-perturbed}
 
@@ -345,9 +345,11 @@
     \begin{figure}[H]
       \centering
       \captionsetup{width=0.9\textwidth}
-
-      \toccaption{Structured grid with integration path over non-contiguous nodes and corresponding matrix.}
-        {?? 2D 10x10 Grid mit Integrationspfad und korresp. Matrix mit Störungen. \todo{s}}
+      \includegraphics[width=0.7\textwidth]{assets/structured-grid-integration-path}
+      \toccaption{Structured grid with integration path over non-contiguous nodes.}
+        {In addition to the structural composition of the matrix derived from this structured grid as determined by the
+        underlying physical problem, the introduction of a line integral over selected grid nodes (red) produces additional
+        nonzeros in the matrix rows corresponding to said nodes which disrupts the existing structure.}
       \label{fig:structured-grid-with-path}
     \end{figure}
 
@@ -380,7 +382,7 @@
         randomizing a portion of their rows. Each perturbed row has its nonzeros' positions shuffled and their numeric
         values randomized. The matrix objects relative storage size is measured as a gauge of the C3SR-format's
         stability to perturbations from the ideal configuration. The graphs display mean values over 1000 iterations for
-        each degree of perturbation. All respective standard deviations are smaller than $1\%$ of their correpsonding
+        each degree of perturbation. All respective standard deviations are smaller than $1\%$ of their corresponding
         mean values and have been omitted from the graph.}
       \label{fig:bytespernnz-perturbed}
     \end{figure}
@@ -389,12 +391,13 @@
     effectively increasing the pattern array J by $7$ elements and, for the first family of matrices whose values array
     V is essentially empty, also adding $7$ new unique values to V. Due to the fact, that the second family of matrices'
     V array is by far the largest of all of its data arrays, and because V does not increase in size as the values are
-    uncompressible in the first place, randomizing a row has less effect than for first family matrices, explaining the
+    incompressible in the first place, randomizing a row has less effect than for first family matrices, explaining the
     difference in the decrease in storage density. In addition, run-length-increment encoding of the structural
     information of contiguous rows corresponding to segments of contiguous inner nodes is inhibited by every randomized
     matrix row within the segment for both matrix families.
 
-    \Todo{Fazit: Stable against small perturbations}
+    To conclude this section, the compression scheme is found to handle perturbations in the regularity of the
+    underlying grid fairly well.
 
   \section{Matrix-Vector Multiplication of Fully Structured Matrices} \label{sec:mvm-structured}
 
@@ -421,9 +424,9 @@
     NUMA-locality according to the explanation given in the previous chapter. The achieved bandwidth is then determined
     as the quotient of the total amount of moved data and the duration required. The data read from memory is comprised
     of the matrix object and the argument vector while data is written exclusively to the output buffer as previously
-    shown in Figure \ref{fig/test-matrices-object-size}.
+    shown in Figure \ref{fig:test-matrices-object-size}.
 
-    As a guage of quality an upper limit to the achievable bandwidth was determined from each machine's read and write
+    As a gauge of quality an upper limit to the achievable bandwidth was determined from each machine's read and write
     bandwidth and the total amounts of data read and written. The memory accesses involved in the arithmetic of the
     matrices studied herein are relatively structured and regular such that the assumption is made that each section of
     memory is read only once from main memory and that if data is required at multiple times during execution it can be
@@ -460,7 +463,10 @@
       \centering
       \captionsetup{width=0.9\textwidth}
       \includegraphics[width=0.9\textwidth]{assets/mvm-perturbed-new}
-      \toccaption{todo}{todo}
+      \toccaption{Matrix-vector multiplication bandwidth benchmarks of unperturbed matrices of both families.}{Both
+        multiplication schemes are displayed for all three machines. Maximum achievable bandwidth is shown in red. KNL
+        performance is limited by thread synchronization overhead which causes slowdown for small grid sizes on the
+        other systems aswell.}
       \label{fig:mvm-perturbed-new}
     \end{figure}
 
@@ -471,14 +477,14 @@
  
      The performance of smaller grid sizes is particularly bad and increases as the grid's dimensions are expanded until
      at a certain extent a bandwidth plateau is reached. A separate analysis found the cost of thread synchronization to
-     outweight the matrix-vector arithmetic for small problem domains explaining a lack of performance where the
+     outweigh the matrix-vector arithmetic for small problem domains explaining a lack of performance where the
      problem size is not large enough to render the synchronization overhead insignificant. This is reflected in the fact
      the grid size required to reach the bandwidth plateau are larger for first family matrices, as their corresponding
      matrix object's are much lighter resulting in less data movement and faster computation times which, conversely,
      entail a higher relative burden of synchronization.
  
      Additionally, thread synchronization was found to scale poorly with the total number of threads. By this the Knights
-     Landing machine is affected severly due to its 64 cores which require larger problem domains to even reach their
+     Landing machine is affected severely due to its 64 cores which require larger problem domains to even reach their
      expected bandwidth plateau than were examined for this thesis as is shown in the graphs by the strikingly low
      obtained bandwidth values.
  
@@ -504,7 +510,7 @@
        b_{\text{max}}^{\text{2nd Fam}} = \frac{1}{\frac{1}{b_r} + \frac{(d_w/d_r)}{b_w}}
      $$
  
-     During development Intel's Threading Building Blocks (TBB) \cite{tbb:github} were intially used for parallelization.
+     During development Intel's Threading Building Blocks (TBB) \cite{tbb:github} were initially used for parallelization.
      TBB is a C++ framework for parallel programming which offers implementations of many data types, algorithms and
      synchronization mechanism useful for concurrency. Most of its features transcend the requirements of this project
      while, conversely, other mechanism such as thread pinning are platform specific and require additional libraries.
@@ -516,7 +522,10 @@
        \centering
        \captionsetup{width=0.9\textwidth}
        \includegraphics[width=0.9\textwidth]{assets/mvm-perturbed-old}
-       \toccaption{todo}{todo}
+       \toccaption{Matrix-vector multiplication benchmark results based on former implementation which uses TBB.}{Same
+         results are shown as in the previous figure. Measurements partly exhibit large variances which is why their error
+         bars were omitted. This graph is shown to highlight the difference arising for medium sized grids if the
+         communication overhead is reduced.}
        \label{fig:mvm-perturbed-old}
      \end{figure}
  
@@ -546,7 +555,8 @@
       \centering
       \captionsetup{width=0.9\textwidth}
       \includegraphics[width=0.9\textwidth]{assets/mvm-perturbed-actually-perturbed}
-      \toccaption{todo}{todo}
+      \toccaption{Matrix-vector multiplication bandwidth benchmarks of perturbed matrices of both families.}{Both
+        multiplication schemes are displayed for the Skylake machines. Maximum achievable bandwidth is shown in red.}
       \label{fig:mvm-perturbed-actually-perturbed}
     \end{figure}
 
